# brads-show

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  DEPLOYMENT.md  HOW_TO_CREATE_A_SKIT.md  QUICK_START.md  README.md  TODO.md  creative_prompt.md  langgraph-workflow.md  new-show.sh  pyproject.toml  run_sketch.py  show_bible.md
Docs/: TODO.md  agent-prompts.md
Shows/silicon_silly/: creative_prompt.md  show_bible.md  write.sh
Shows/test_show/: creative_prompt.md  show_bible.md  write.sh
config/agents/: head_writer.md  qa.md  research.md  script_coordinator.md  senior_writer_a.md  senior_writer_b.md  showrunner.md  staff_writer_a.md  staff_writer_b.md  story_editor.md
src/: __init__.py  run_sketch.py
src/agents/: __init__.py  base.py  head_writer.py  qa.py  research.py  script_coordinator.py  senior_writer_a.py  senior_writer_b.py  showrunner.py  staff_writer_a.py  staff_writer_b.py  story_editor.py
src/cli/: __init__.py  checkpoints.py  interface.py
src/config/: __init__.py  agent_loader.py  validation.py  workflow_loader.py
src/utils/: __init__.py  config.py  llm.py
src/workflow/: __init__.py  edges.py  graph.py  nodes.py  state.py
templates/: creative_prompt_template.md  show_bible_template.md  write_template.sh
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_edges.py  test_integration.py  test_tracing.py  test_workflow.py
